# robotframework-keepasslibrary

./: .flake8  .gitignore  .travis.yml  CHANGELOG_SECRET_SUPPORT.md  LICENSE  Pipfile  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tasks.py
.github/workflows/: python-package-regression.yml  python-package.yml
KeePassLibrary/: KeePassLibrary.py  __init__.py
atests/: Composite Master Key Secret.robot  Composite Master Key.robot  Entries.robot  Entry Secret.robot  Entry.robot  Group.robot  Groups.robot  KDBX v3.robot  KDBX v4 Create Secret.robot  KDBX v4 Create.robot  KDBX v4.robot  __init__.robot  json_lib.py  secret_variables.py
atests/Data/: test4.kdbx  test4_only_v2_keyfile.kdbx  test4_v2.keyx  test4_v2_keyfile_and_password.kdbx
atests/Resources/: Robot_utils.resource
docs/: KeePassLibrary-0.10.0.rst  KeePassLibrary-0.11.0.rst  KeePassLibrary-0.12.0.rst  KeePassLibrary-0.3.0.rst  KeePassLibrary-0.3.1.rst  KeePassLibrary-0.4.0.rst  KeePassLibrary-0.4.1.rst  KeePassLibrary-0.5.0.rst  KeePassLibrary-0.6.0.rst  KeePassLibrary-0.7.0.rst  KeePassLibrary-0.8.0.rst  KeePassLibrary-0.9.0.rst  KeePassLibrary.html
src/KeePassLibrary/: __init__.py  errors.py  timezone.py  version.py
src/KeePassLibrary/base/: __init__.py  context.py  librarycomponent.py
src/KeePassLibrary/entry/: __main__.py  get_versions.py  translation.py
src/KeePassLibrary/keywords/: __init__.py  keepassdatabase.py  keepassentries.py  keepassentry.py  keepassgroup.py  keepassgroups.py
src/KeePassLibrary/utils/: __init__.py  data_types.py  timezone.py  types.py
src/robotframework_keepasslibrary_translation/: __init__.py  translation_en.json  translation_nl.json
tests/: Composite Master Key.robot  KDBX.robot
tests/data/: test4_only_keyfile.kdbx  test4_only_password.kdbx
utests/test/: test_secret_functionality.py
utests/test/utils/: test_add_datetime_timezone.py  test_convert_datetime_timezone.py  test_prepare_set_timezone.py
