[build-system]
requires = ["setuptools>=75.3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "robotframework-keepasslibrary"
version = "0.12.1.dev1"
authors = [
  { name="William Looman", email="wlooman@gmail.com" },
]
description = "Robot Framework library for working with KeePass Database"
readme = "README.md"
requires-python = ">=3.8, <3.15"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Library"
    ]

dependencies = [
    "pykeepass==4.1.1.post1",
    "robotframework>=5.0.1",
    "robotframework-pythonlibcore>=4.4.1"
    ]

[project.urls]
Homepage = "https://github.com/loomanw/robotframework-keepasslibrary"
Issues = "https://github.com/loomanw/robotframework-keepasslibrary/issues"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["KeePassLibrary*"]  # alternatively: `exclude = ["additional*"]`
namespaces = false

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
filterwarnings = [
    "ignore::SyntaxWarning",
    "ignore::DeprecationWarning"
]

[tool.robocop.lint]
ignore = [
    "DEPR05",   # Requires RF >=7
    "DEPR06",   # Requires RF >=7
]
configure = [
    "too-many-calls-in-test-case.max_calls=14",
    "file-too-long.max_lines=600",
]
reports = ["all", "sarif"]

[tool.robocop.format]
select = [
    "DiscardEmptySections",
    "SplitTooLongLine",
    "AlignTestCasesSection",
    "AlignTemplatedTestCases",
    "AlignKeywordsSection",
]
diff = true
overwrite = true
space_count = 4
continuation_indent = 4
start_line = 10
end_line = 20
configure = [
    "SplitTooLongLine.split_on_every_arg=False",
    "DiscardEmptySections.allow_only_comments=True",
    "AlignTestCasesSection.enabled=True",
    "AlignTemplatedTestCases.enabled=True",
    "AlignKeywordsSection.enabled=True",
]
